force-app/main/default/objects/DMP_Priority_Segment__mdt/DMP_Priority_Segment__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store Priority DMP Segments</description>
    <label>DMP Priority Segment</label>
    <pluralLabel>DMP Priority Segments</pluralLabel>
</CustomObject>