force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Audience segment category specified in DMP system</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>