force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Tells if a particular segment is active in DMP system</description>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>