force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/Last_Compute_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Compute_Time__c</fullName>
    <description>Last time this segment data was collected in DMP system</description>
    <label>Last Compute Time</label>
    <type>DateTime</type>
</CustomField>