force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Audience Segment Name in DMP system</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>