force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Field that captures daily priority for DMP segments</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>