force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/SegmentId__c.field-meta.xml
<CustomField>
    <fullName>SegmentId__c</fullName>
    <description>Field that captures DMP segment ID</description>
    <label>SegmentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>