force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/SegmentId_Long__c.field-meta.xml
<CustomField>
    <fullName>SegmentId_Long__c</fullName>
    <description>Audience Segment Id in DMP system</description>
    <label>SegmentId(Long)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>