force-app/main/default/objects/DMP_Priority_Segment__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Audience segment type specified in DMP system</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>